<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tasks_appbar"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/background"
    >

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/tasks_collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:expandedTitleMarginBottom="44dp"
        app:expandedTitleMarginStart="26dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:title="@string/my_tasks"
        >

        <RelativeLayout
            android:id="@+id/btn_tasks_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="70dp"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.0"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_tasks_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingStart="24dp"
                android:paddingTop="12dp"
                android:paddingEnd="26dp"
                android:paddingBottom="12dp"
                android:src="@drawable/icon_visibility"
                />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_toolbar_tasks_done"
            style="@style/Text.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="80dp"
            android:textColor="@color/gray"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="1.4"
            tools:text="Выполнено - 5"
            />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tasks_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            />
    </com.google.android.material.appbar.CollapsingToolbarLayout>
</com.google.android.material.appbar.AppBarLayout>
