...
            android:layout_height="wrap_content"
            android:background="@color/back_primary"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_edit_text_new_task"
...
                android:padding="16dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                />

            <LinearLayout
                android:id="@+id/btn_chose_new_task_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical"
...
